# Forked third-party skills. See ../skills.txt for provenance and the
# upstream MIT license at obra--superpowers-LICENSE.txt. Each sp-*/
# subdir is its own Bazel package with its own BUILD.bazel; this
# top-level package owns only the license file and the index.

load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "license_fmt",
    src = "obra--superpowers-LICENSE.txt",
    tool = "textfmt",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "license_tag",
    src = "obra--superpowers-LICENSE.txt",
    tags = [
        "doc",
    ],
)
