"""
k3d interface -- macros, templates, and catalog re-export for k3d clusters.

k3d.cue re-exports the cluster inventory from catalog/catalog.cue.
templates.cue provides tag-parameterized templates for Bazel genrules.
k3d.bzl provides the k3d_cluster() macro used by generated BUILD.bazel files.
"""

load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

exports_files([
    "k3d.bzl",
    "k3d.cue",
    "templates.cue",
])

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "k3d_cue_fmt",
    src = "k3d.cue",
    tool = "cue",
)

fmt_test(
    name = "k3d_bzl_fmt",
    src = "k3d.bzl",
    tool = "buildifier",
)

fmt_test(
    name = "templates_cue_fmt",
    src = "templates.cue",
    tool = "cue",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "k3d_cue_tag",
    src = "k3d.cue",
    tags = [
        "cue",
        "source",
    ],
)

tagged_file(
    name = "k3d_bzl_tag",
    src = "k3d.bzl",
    tags = [
        "bazel",
        "bazel-macro",
    ],
)

tagged_file(
    name = "templates_cue_tag",
    src = "templates.cue",
    tags = [
        "cue",
        "source",
    ],
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
